# yama

./: Cargo.toml  Makefile  Readme.md  build.rs
c_src/: file_manager.c
include/: file_manager.h
src/: lib.rs  main.rs
