[package]
name = "yama"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "3.3"
zip = "8.6"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha256 = "1.6"
libc = "0.2"

[dev-dependencies]
tempfile = "3.16"

[build-dependencies]
cc = "1.2"
